# Edge_Lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  start.bat  tsconfig.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: app.tsx  globals.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: app.json  eas.json  package-lock.json  package.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/editor/: [projectId].tsx
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/: agent-chat.tsx  ai-chat.tsx  git-panel.tsx  ide-layout.tsx  kicad-viewer.tsx  library-manager.tsx  logo.tsx  panels.tsx  search-palette.tsx  settings-modal.tsx  terminal-panel.tsx  toolbar.tsx
backend/api/: Dockerfile  package.json
backend/api/.edge-lab-data/: edge-lab.sqlite-shm  edge-lab.sqlite-wal
backend/api/src/: index.ts
backend/api/src/db/: schema.ts  sqlite.ts
backend/api/src/lib/: git-service.ts  indexer.ts  jwt.ts
backend/api/src/middleware/: auth.ts
backend/api/src/routes/: agent.ts  ai.ts  (+7 more)
backend/lsp-gateway/: Dockerfile  package.json
backend/lsp-gateway/src/: index.ts
backend/sync-server/: Dockerfile  package.json  tsconfig.json
backend/sync-server/src/: index.ts  y-websocket.d.ts
scripts/: gen-icons.mjs
(+10 files in other folders)
